<resources>
    <string name="app_name">BitcoinMarketPrice</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bitcoin_in_dollar">Dollar</string>
    <string name="bitcoin_in_pond">Pond</string>
    <string name="bitcoin_in_euro">Euro</string>
    <string name="request_time">Time</string>
    <string name="usd">USD</string>
    <string name="gbp">GBP</string>
    <string name="eur">EUR</string>
    <string name="convert">Convert To Bitcoin</string>
    <string name="dash">-</string>
    <string name="currency_to_bitcoin">Input currency to bitcoin</string>
    <string name="usd_to_bitcoin">USD to Bitcoin</string>
    <string name="gbp_to_bitcoin">GBP to Bitcoin</string>
    <string name="eur_to_bitcoin">EUR to Bitcoin</string>
    <string name="update_time">23 December 2022 10:17 PM</string>
    <string name="add_new_currency">Add more currency</string>
</resources>