<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BitcoinConverterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/usd"
                android:textColor="@color/white"
                android:textSize="@dimen/header_text_size" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/gbp"
                android:textColor="@color/white"
                android:textSize="@dimen/header_text_size" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/eur"
                android:textColor="@color/white"
                android:textSize="@dimen/header_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginBottom="@dimen/large_margin"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_usd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/dash"
                android:inputType="number"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edt_gbp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/dash"
                android:inputType="number"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edt_eur"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/dash"
                android:inputType="number"
                android:textColor="@color/black" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/header_margin_top"
            android:layout_marginBottom="@dimen/large_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_usd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/usd"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_gbp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/gbp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tv_eur"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/eur"
                android:textColor="@color/black"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_convert"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginTop="@dimen/large_margin"
            android:background="@color/purple_500"
            android:padding="@dimen/small_padding"
            android:text="@string/convert"
            android:textColor="@color/white" />

    </LinearLayout>

</FrameLayout>