<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentPriceFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/stock_price_card_height"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@color/purple_500"
            app:cardCornerRadius="@dimen/card_stock_price_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="112dp"
                    android:layout_height="match_parent"
                    android:background="@color/purple_200"
                    android:gravity="center"
                    android:text="@string/usd"
                    android:textColor="@color/black"
                    android:textSize="@dimen/header_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_bitcoin_in_dollar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|end"
                    android:padding="@dimen/large_padding"
                    android:textColor="@color/white"
                    android:textSize="@dimen/header_text_size"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/stock_price_card_height"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@color/purple_500"
            app:cardCornerRadius="@dimen/card_stock_price_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="112dp"
                    android:layout_height="match_parent"
                    android:background="@color/purple_200"
                    android:gravity="center"
                    android:text="@string/gbp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/header_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_bitcoin_in_pond"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|end"
                    android:padding="@dimen/large_padding"
                    android:textColor="@color/white"
                    android:textSize="@dimen/header_text_size"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/stock_price_card_height"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@color/purple_500"
            app:cardCornerRadius="@dimen/card_stock_price_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="112dp"
                    android:layout_height="match_parent"
                    android:background="@color/purple_200"
                    android:gravity="center"
                    android:text="@string/eur"
                    android:textColor="@color/black"
                    android:textSize="@dimen/header_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_bitcoin_in_euro"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|end"
                    android:padding="@dimen/large_padding"
                    android:textColor="@color/white"
                    android:textSize="@dimen/header_text_size"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</FrameLayout>